2012-09-03 Harald Oehlmann <oehhar@apache.org>
    * Thank you accepting me as committer

2012-08-19 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: the module returns now a HTTP_INTERNAL_SERVER_ERROR when a request
    namespace cannot be created

2012-08-16 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetPkgInit.c: improved namespace structure pointer handling (contributed by
    Georgios Petasis)

2012-08-15 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Oracle.tcl: fixed method makeDBFieldValue in class Oracle (Bug #53703)
 
2012-08-15 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/dio.xml: Fixed wrong declariation of 'insert' subcommand in page manual (Bug #53670)
    * rivet/packages/dio/dio_Postgresql.tcl: method makeDBFieldValue implemented and tested with
    package Sessiona (Bug #53703).
    * rivet/packages/session/session-create.sql: file renamed as session-create-postgresql.sql. 
    Schema tested with package Session. 
    * Changelog: entry of Aug 12 corrected: the method of Database (dio.tcl) in question was 'store' 
    not 'fetch'
    * rivet/packages/session/session-class.tcl: removed 'conf' variable that could clash with
    application code (and in at least one case it did) (Fixes bug #53544) 

2012-08-13 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Sqlite.sql,rivet/packages/dio/dio_Mysql.tcl: These connector classes
    didn't compute correctly the number of seconds as unix timestamp to be returned for comparison
    with the same information returned by [clock seconds] (Bug #53703)
    * rivet/packages/session/session-class.tcl: special datetime field were registered associated
    to the rivet_session and rivet_session_cache names, whereas the class has member variables for
    storing these definitions (Bug #53543)

2012-08-12 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: Database's class 'store' method was rewritten on a more simple 