@@ -386,16 +386,23 @@ proc apachetest::makeconf { outfile {extra ""} } {
 
     #getting uid and gid of user
     catch {exec id} raw_string		
-    set username  [lindex [regexp -inline {(uid=)([\d]+)(\()([^\)]+)(\))} $raw_string]  4]
-    set group  [lindex [regexp -inline {(groups=)([\d]+)(\()([^\)]+)(\))} $raw_string]  4]
+
+# username and group no longer needed. User and Group directives removed from
+# main conffile template (#Bug 53396)
+
+#   set username  [lindex [regexp -inline {(uid=)([\d]+)(\()([^\)]+)(\))} $raw_string]  4]
+#   set group  [lindex [regexp -inline {(gid=)([\d]+)(\()([^\)]+)(\))} $raw_string]  4]
 
     # replace with determinemodules
     set LOADMODULES [determinemodules $binname]
 
+    puts "reading template from $templatefile"
     set fl [open [file join . $templatefile] r]
     set template [read $fl]
     append template $extra
     close $fl
+
+    puts $template
 
     set out [subst $template]
 
